# active-dsprites

./: .gitmodules  README.md  pyproject.toml
notebooks/: demo.ipynb
src/adsprites/: __init__.py  dsprites.py
